--- a/сборник/Баллистика.md
+++ b/сборник/Баллистика.md
@@ -1,3 +1,7 @@
+---
+tags:
+  - Main_1
+---
 Баллистическая часть курсового проекта заключается в расчета потребной скорости для совершения маневра. Такую скорость называют характеристической.
 ### Основная концепция - чтобы перейти с одной орбиты на другую, необходимо сделать из вектора скорости на настоящей орбите вектор скорости на новой орбите
 ![[Сложение скоростей 1.png]]
