--- a/сборник/Определение параметров орбиты и ее построение.md
+++ b/сборник/Определение параметров орбиты и ее построение.md
@@ -1,4 +1,4 @@
-[[Орбитальная механика]]
+[[Орбиты КА и определение скоростей маневров]]
 ## Зачастую орбиты определяются радиусами апогея и перигея относительно некоторого центрального тела, например Земли
 
 ## $$e = \dfrac{r_a-r_{\pi}}{r_a+r_{\pi}}$$
