--- a/сборник/Параметры орбиты.md
+++ b/сборник/Параметры орбиты.md
@@ -1,4 +1,4 @@
-[[Орбитальная механика]]
+[[Орбиты КА и определение скоростей маневров]]
 ## Любая орбита описывается уравнением конической кривой, а именно
 ## $$r=\dfrac{p}{1+e*cos(v)}$$
 Параметр p - фокальный параметр кривой
