--- a/сборник/Перевод круговой орбиты в эллиптическую.md
+++ b/сборник/Перевод круговой орбиты в эллиптическую.md
@@ -1,4 +1,4 @@
-[[Орбитальная механика]]
+[[Орбиты КА и определение скоростей маневров]]
 
 Рассмотрим классический случай перехода с круговой орбиты на эллиптическую.
 Пусть высота круговой орбиты - 200 км. Высота апогея новой орбиты - 500 км, высота перигея новой орбиты - 200 км. Разобьем поиск на несколько этапов
