--- a/сборник/Программирование - не магия, но инструмент.md
+++ b/сборник/Программирование - не магия, но инструмент.md
@@ -10,4 +10,4 @@
 
 В общем-то, было бы очень хорошо если бы учебная программа была переписана с опиранием на умение и возможность любого студента писать несложные программы, которые могут помочь выполнять рутинные действия. Приведу простой пример из собственной практики. При выполнении домашнего задания по строительной механике было необходимо посчитать сумму тригонометрического ряда из 2500 слагаемых в 10000 точках. Такое действие численно можно реализовать в таких пакетах как: PTC MatCad, Wolfram Mathematica, Maple т.п. Однако, все перечисленные пакеты платные(хи-хи) и дальнейшие оперирование полученными данными с целью построения графиков вызывает определенные затруднения. Однако, программа написанная из 100 строк на Python может выполнить поставленную задачу в считанные секунды и я сам могу определять какой результат и в каком формате мне нужен.
 
-Python, хоть и является высокоуровневым языком программирования, что существенно снижает его скорость в сравнении с C,C++, обладает широкой базой библиотек, позволяющих оптимизировать выполнение многих задач. Грубо говоря, Python идеален для стартового прототипирования.
+Python, хоть и является высокоуровневым языком программирования, что существенно снижает его скорость в сравнении с C,C++, обладает широкой базой библиотек, позволяющих оптимизировать выполнение многих задач. Грубо говоря, Python идеален для начального прототипирования.
