Баллистика схода с орбиты

--- a/сборник/Баллистика спуска в атмосферу.md
+++ b/сборник/Баллистика спуска в атмосферу.md
@@ -3,3 +3,6 @@ tags:
   - Main_2
 ---
 [[Баллистика]]
+Спуск в атмосферу разделяют на два этапа
+1. Внеатмосферный участок полета до высоту в 100км [[Внеатмосферный участок полета]]
+2. Атмосферный участок полета с высоты 100км до контакта с поверхностью[[Атмосферный участок полета КА]]
