Добавил программу для спуска в атмосферу

--- a/сборник/Определение потребной скорости для схода КА.md
+++ b/сборник/Определение потребной скорости для схода КА.md
@@ -38,4 +38,15 @@ $$r_1 \cdot v_1 \cdot \sin(\dfrac{\pi}{2}) = r_2 \cdot v_2 \cdot \sin(\dfrac{\pi
 или
 $$\theta = \arccos \left(\dfrac{r_1 \cdot v_1}{r_2 \cdot v_2} \right)$$
 В случае же нашей задачи
-$$\theta = \arccos \left(\dfrac{R_{орб} \cdot v_0}{R_{атм} \cdot v_{вх}} \right)$$
+$$\theta = \arccos \left(\dfrac{R_{орб} \cdot V}{R_{атм} \cdot V_{вх}} \right)$$
+
+Рассмотрим пример расчета
+
+Пусть высота начальной орбиты - 500км, высота до которой необходимо опустится - 80км. Высота атмосферы - 100км.
+Тогда 
+
+$$V-V_0=\sqrt{398600 \cdot \left( \dfrac{2}{6371+500} - \dfrac{1}{6661}\right)} - \sqrt{\dfrac{398600}{6371+500}}=-121 \dfrac{м}{с}$$
+Скорость входа в атмосферу
+$$V_{вх} = \sqrt{398600 \cdot \left( \dfrac{2}{6371+100} - \dfrac{1}{6661}\right)}=7959 \dfrac{м}{с}$$
+Угол входа в атмосферу
+$$\theta = \arccos \left(\dfrac{(6371+500) \cdot 7495}{(6371+100) \cdot 7959} \right)=0.769 \degree$$
